...
        shape = DialogShape,
        onDismissRequest = close,
        title = { Text(target.name) },
        text = {
            Column(Modifier.fillMaxWidth(), verticalArrangement = Arrangement.spacedBy(10.dp)) {
                FlatButton(
                    text = if (inList) "Remove from My List" else "Add to My List",
                    icon = if (inList) Icons.Default.Check else Icons.Default.Add,
                    prominent = true,
                    modifier = Modifier.focusRequester(first),
                    onClick = {
                        if (inList) {
                            container.library.remove(target.id)
...
